--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="logo">SafeHer</div>
     <ul class="nav-links">
       <li><a href="#">Home</a></li>
-      <li><a href="#">Articles</a></li>
+      <li><a href="articles.html">Articles</a></li>
       <li><a href="#">Resources</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
