--- a/articles.html
+++ b/articles.html
@@ -12,13 +12,21 @@
   <nav class="navbar">
     <div class="logo">SafeHer</div>
     <ul class="nav-links">
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="articles.html">Articles</a></li>
       <li><a href="#">Resources</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
     <div class="three-dots" onclick="toggleSidePanel()">&#8942;</div>
   </nav>
+  <!-- Side Panel -->
+  <div id="sidePanel" class="side-panel">
+    <a href="javascript:void(0)" class="closebtn" onclick="toggleSidePanel()">&times;</a>
+    <a href="#">Emergency Numbers</a>
+    <a href="#">Self Defense</a>
+    <a href="#">Workshops</a>
+    <a href="#">About Us</a>
+  </div>
 
   <!-- ✅ Honeycomb Section -->
   <section class="honeycomb-section">
