--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   <!-- Side Panel -->
   <div id="sidePanel" class="side-panel">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleSidePanel()">&times;</a>
-    <a href="#">Emergency Numbers</a>
+    <a href="emergency.html">Emergency Numbers</a>
     <a href="#">Self Defense</a>
     <a href="#">Workshops</a>
     <a href="#">About Us</a>
