--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <a href="emergency.html">Emergency Numbers</a>
     <a href="self-defense.html">Self Defense</a>
     <a href="#">Workshops</a>
-    <a href="#">About Us</a>
+    <a href="newsletter.html">About Us</a>
     <a href="login.html">Login / Sign Up</a>
   </div>
 
