--- a/contact.html
+++ b/contact.html
@@ -175,8 +175,8 @@
     <div class="logo">SafeHer</div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
-      <li><a href="#">Articles</a></li>
-      <li><a href="#">Resources</a></li>
+      <li><a href="article.html">Articles</a></li>
+      <li><a href="resource.html">Resources</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
     <div class="three-dots" onclick="toggleSidePanel()">&#8942;</div>
@@ -185,10 +185,10 @@
   <!-- Side Panel -->
   <div id="sidePanel" class="side-panel">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleSidePanel()">&times;</a>
-    <a href="#">Emergency Numbers</a>
+    <a href="emergency.html">Emergency Numbers</a>
     <a href="self-defense.html">Self Defense</a>
-    <a href="#">Workshops</a>
-    <a href="#">About Us</a>
+    <a href="workshop.html">Workshops</a>
+    <a href="newsletter.html">About Us</a>
     <a href="contact.html">Contact</a>
   </div>
 
