--- a/articles.html
+++ b/articles.html
@@ -14,7 +14,7 @@
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="articles.html">Articles</a></li>
-      <li><a href="#">Resources</a></li>
+      <li><a href="resources.html">Resources</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
     <div class="three-dots" onclick="toggleSidePanel()">&#8942;</div>
@@ -25,7 +25,7 @@
     <a href="javascript:void(0)" class="closebtn" onclick="toggleSidePanel()">&times;</a>
     <a href="emergency.html">Emergency Numbers</a>
     <a href="self-defense.html">Self Defense</a>
-    <a href="#">Workshops</a>
+    <a href="workshop.html">Workshops</a>
     <a href="newsletter.html">About Us</a>
   </div>
 
