--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="articles.html">Articles</a></li>
-      <li><a href="#">Resources</a></li>
+      <li><a href="resources.html">Resources</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
     <!-- 3-dot button -->
@@ -113,7 +113,7 @@
     <a href="javascript:void(0)" class="closebtn" onclick="toggleSidePanel()">&times;</a>
     <a href="emergency.html">Emergency Numbers</a>
     <a href="self-defense.html">Self Defense</a>
-    <a href="#">Workshops</a>
+    <a href="workshop.html">Workshops</a>
     <a href="newsletter.html">About Us</a>
     <a href="login.html">Login / Sign Up</a>
   </div>
