--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="articles.html">Articles</a></li>
       <li><a href="resources.html">Resources</a></li>
+      <li><a href="downloads.html">Downloads</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
     <!-- 3-dot button -->
