--- a/contact.html
+++ b/contact.html
@@ -194,6 +194,35 @@
       <p id="formResponse"></p>
     </div>
   </div>
+  <!-- Floating SOS Button -->
+<a href="mailto:cybercrimecell@nic.in?subject=Urgent%20Cybersecurity%20SOS&body=Dear%20Cybersecurity%20Authority,%0D%0A%0D%0AI%20am%20facing%20a%20serious%20cyber%20harassment/threat%20issue.%20Please%20assist%20me%20immediately.%0D%0A%0D%0AThank%20you."
+   class="sos-btn" target="_blank">
+   🚨 SOS
+</a>
+
+<!-- Button Styling -->
+<style>
+.sos-btn {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  background: #ff1e56;
+  color: #fff;
+  font-weight: bold;
+  padding: 15px 25px;
+  border-radius: 50px;
+  text-decoration: none;
+  font-size: 1.2rem;
+  transition: 0.3s ease;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+  z-index: 9999; /* keeps it above all content */
+}
+.sos-btn:hover {
+  background: #ff4f6f;
+  transform: scale(1.1);
+}
+</style>
+
 
   <!-- Footer -->
   <footer>
