--- a/index.html
+++ b/index.html
@@ -157,14 +157,17 @@
   </div>
 
   <!-- Hero Section -->
-  <section class="hero">
-    <h1 class="fade-text">SafeHer: Women Safety Awareness</h1>
-  </section>
+  <section class="hero" 
+  style="background: url('bg.jpeg') no-repeat center center / cover;">
+    
+  <h1 class="fade-text">SafeHer: Women Safety Awareness</h1>
+</section>
+
 
   <!-- Articles Section -->
   <section class="articles">
     <article>
-      <img src="https://source.unsplash.com/600x400/?women,safety" alt="Awareness">
+      <img src="download (14).jpeg" alt="Awareness">
       <div>
         <h2>Why We Created SafeHer</h2>
         <p>Our mission is to create a safe digital space where women can access resources, awareness guides, and emergency support. Safety is not just a priority—it is a right.</p>
@@ -172,21 +175,50 @@
     </article>
 
     <article>
-      <img src="https://source.unsplash.com/600x400/?support,women" alt="Support">
       <div>
         <h2>Empowering Through Knowledge</h2>
         <p>By sharing real stories, guides, and workshops, we empower women to be prepared and resilient in challenging situations.</p>
       </div>
+      <img src="download (15).jpeg" alt="Support">
     </article>
 
     <article>
-      <img src="https://source.unsplash.com/600x400/?community,women" alt="Community">
+      <img src="download (17).jpeg" alt="Community">
       <div>
         <h2>Building a Safer Community</h2>
         <p>Together, through awareness and collective action, we can build a safer society where women feel free, respected, and protected.</p>
       </div>
     </article>
   </section>
+  <!-- Floating SOS Button -->
+<a href="mailto:cybercrimecell@nic.in?subject=Urgent%20Cybersecurity%20SOS&body=Dear%20Cybersecurity%20Authority,%0D%0A%0D%0AI%20am%20facing%20a%20serious%20cyber%20harassment/threat%20issue.%20Please%20assist%20me%20immediately.%0D%0A%0D%0AThank%20you."
+   class="sos-btn" target="_blank">
+   🚨 SOS
+</a>
+
+<!-- Button Styling -->
+<style>
+.sos-btn {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  background: #ff1e56;
+  color: #fff;
+  font-weight: bold;
+  padding: 15px 25px;
+  border-radius: 50px;
+  text-decoration: none;
+  font-size: 1.2rem;
+  transition: 0.3s ease;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+  z-index: 9999; /* keeps it above all content */
+}
+.sos-btn:hover {
+  background: #ff4f6f;
+  transform: scale(1.1);
+}
+</style>
+
 
   <!-- Footer -->
   <footer>
