--- a/downloads.html
+++ b/downloads.html
@@ -24,10 +24,10 @@
   <!-- ✅ Side Panel -->
   <div id="sidePanel" class="side-panel">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleSidePanel()">&times;</a>
-    <a href="#">Emergency Numbers</a>
-    <a href="#">Self Defense</a>
-    <a href="#">Workshops</a>
-    <a href="#">About Us</a>
+    <a href="emergency.html">Emergency Numbers</a>
+    <a href="self-defense.html">Self Defense</a>
+    <a href="workshop.html">Workshops</a>
+    <a href="newsletter.html">About Us</a>
   </div>
 
 <!-- Downloadable PDFs Section -->
