--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
       <li><a href="resources.html">Resources</a></li>
       <li><a href="downloads.html">Downloads</a></li>
       <li><a href="contact.html">Contact</a></li>
+      <li><a href="quiz.html">Quiz</a></li>
     </ul>
     <!-- 3-dot button -->
     <div class="three-dots" onclick="toggleSidePanel()">&#8942;</div>
