--- a/auth.html
+++ b/auth.html
@@ -125,7 +125,7 @@
 
   <!-- Auth Card -->
   <div class="auth-container">
-    <h1>SheShield</h1>
+    <h1>SafeHer</h1>
     <h3>Women Safety Awareness</h3>
 
     <div class="toggle-btns">
